# w10_kinematics

./: CMakeLists.txt  IK_DOCUMENTATION.md  IK_VISUALIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  package.xml
config/: w10_kinematics.yaml
include/w10_kinematics/: arm_angle_ik.hpp  w10_kinematics_solver.hpp
launch/: ik_visualize.launch.py  start_ik_visualization.sh  w10_ik.launch.py
src/: arm_angle_ik.cpp  debug_joints.cpp  debug_positions.cpp  debug_q_mapping.cpp  find_arm_angle.cpp  ik_test.cpp  ik_visualize.cpp  test_all_q.cpp  test_q_indices.cpp  w10_ik_node.cpp  w10_ik_test.cpp  w10_kinematics_solver.cpp
urdf/: w10.csv  w10.urdf
