<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>w10_kinematics</name>
  <version>0.0.0</version>
  <description>Inverse kinematics solver for W10 manipulator using arm angle dimension reduction</description>
  <maintainer email="hyang@buaa.edu.cn">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>w10_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
